# AI_settings_probe

./: README.md
local-assistant-probe/: .env.example  ENV_SETUP.md  README.md  SETUP_INSTRUCTIONS.md  pyproject.toml  setup_and_run.py
local-assistant-probe/local_assistant_probe/: __init__.py  probe.py
local-assistant-probe/tests/: test_probe.py
